--- a/gbu.html
+++ b/gbu.html
@@ -173,7 +173,7 @@
 				</div>
 				<div class="col-lg-7 col-md-7 col-sm-7 text-centre fh5co-link-wrap">
 					<ul data-offcanvass="yes">
-						<li><a href="C:\Users\ashht\Downloads\GBUONLINE\GBUONLINE\newsStand\news.html" class="cover-text-lead wow fadeInUp" data-wow-duration="0.5s" data-wow-delay=".8s">News & Updates</a></li>
+						<li><a href="#" class="cover-text-lead wow fadeInUp" data-wow-duration="0.5s" data-wow-delay=".8s">News & Updates</a></li>
 
                       <li class="dropdown">
                      
